err/easywidgets.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/EasyWidgets-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/ew'...
Compiling './lib/python3.5/site-packages/ew/core.py'...
***   File "./lib/python3.5/site-packages/ew/core.py", line 108
    except fev.Invalid, inv: # pragma no cover
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ew/resource.py'...
***   File "./lib/python3.5/site-packages/ew/resource.py", line 71
    raise AssertionError, 'Unknown resource type %r' % resource
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ew/templates'...
Listing './lib/python3.5/site-packages/ew/templates/dojo'...
Listing './lib/python3.5/site-packages/ew/tests'...
Listing './lib/python3.5/site-packages/ew/tests/controllers'...
Listing './lib/python3.5/site-packages/ew/tests/lib'...
Listing './lib/python3.5/site-packages/ew/tests/templates'...
Compiling './lib/python3.5/site-packages/ew/tests/test_widgets.py'...
***   File "./lib/python3.5/site-packages/ew/tests/test_widgets.py", line 21
    print LinkField().display()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
